--- a/src/templates/landing/common/_base.html
+++ b/src/templates/landing/common/_base.html
@@ -58,6 +58,7 @@
                 var item = $(this);
                 var valid = item.closest('form').validationEngine('validate');
                 var form = $(this).closest('form');
+                $('.g8SumitLogin').addClass('isLoading');
                 if (!valid) {
                     } else {
                         let login_data = form.serialize()
@@ -76,6 +77,7 @@
                                 $('.tac').hide();
                                 msg.html("<p>" + data.message + "</p>")
                                 login_warning_form.show();
+                                $('.g8SumitLogin').removeClass('isLoading')
                             }
                         });
                 }
@@ -91,6 +93,7 @@
                 var item = $(this);
                 var valid = item.closest('form').validationEngine('validate');
                 var form = $(this).closest('form');
+                $('.save-register').addClass('isLoading');
                 if (!valid) {
                     } else {
                         register_data = form.serialize()
@@ -108,6 +111,7 @@
                                     window.location.href = data.redirect_url
                                 }, 2000)
                             }else{
+                                $('.save-register').removeClass('isLoading');
                                 var parrafo_register = $('.parrafo-register')
                                 var msg = $('.message-warning')
                                 var register_form = $('.register-form')
@@ -135,7 +139,7 @@
             $('.register-form').show();
         });
         $('.confirm-button').on('click', function (e) {
-            console.log(register_data, 'REGISTER DATA')
+            $('.confirm-button').addClass('isLoading');
             $.ajax({
                 url : "{% url 'landing:confirm_register' %}",
                 type : "post",
@@ -169,6 +173,16 @@
                 }  	
             })
         }
+        if(document.getElementsByClassName('headerButtonLogin')[0] || document.getElementsByClassName('headerButtonRegistrate')[0]){
+            let elg8ClosePopup = document.getElementsByClassName('g8ClosePopup')
+            for(const g8ClosePopup of elg8ClosePopup){
+                    g8ClosePopup.addEventListener('click', function(e){
+                        e.preventDefault();
+                        this.parentNode.classList.remove('active')
+                        OVERLAY.classList.remove('active')
+                    });
+                }
+            }
     </script>
 </body>
 </html>
