--- a/src/templates/landing/common/_header.html
+++ b/src/templates/landing/common/_header.html
@@ -23,7 +23,7 @@
                     <a href="#galeria" class="headerAnclaBlock">Galería <span class="lineActive" style="background:#008ac9;"></span></a>
                 {% endif %}
                 {% if header_section.show_sponsors_section %}
-                    <a href="#auspiciador" class="headerAnclaBlock">Auspiciadores <span class="lineActive" style="background:#008ac9;"></span></a>
+                    <a href="#auspiciador" class="headerAnclaBlock">Empresas <span class="lineActive" style="background:#008ac9;"></span></a>
                 {% endif %}
                 {% if header_section.show_networking_section %}
                     <a href="#networking" class="headerAnclaBlock">Networking <span class="lineActive" style="background:#008ac9;"></span></a>
@@ -49,7 +49,7 @@
             <div class="headerOptionsSessions">
                 <div class="headerOptionLogout f aic jcfe">
                     <a href="" class="headerButtonLogin login">Inicia Sesión</a>
-                    <a href="" class="headerButtonRegistrate">Regístrate</a>
+                    <a href="" class="headerButtonRegistrate">Pre-Registro</a>
                 </div>
                 <div class="headerOptionLogin f aic jcfe">
                     <h3 class="headerNameUser">Hola {{logged_user.names}}</h3>
