--- a/src/templates/landing/home.html
+++ b/src/templates/landing/home.html
@@ -343,7 +343,7 @@
 <section class="b6 anclaBlock anclaBlock" id="auspiciador">
     <div class="grilla">
         <div class="b6Top">
-            <h4>Auspiciadores</h4>
+            <h4>Empresas</h4>
             <h3 class="gTitle tac">Con la participación de</h3>
         </div>
         <div class="b6Wrap">
