--- a/src/templates/landing/common/_header.html
+++ b/src/templates/landing/common/_header.html
@@ -14,25 +14,25 @@
         <div class="headerAnclas f aic jcc">
             {% if header %}
                 {% if header_section.show_about_section %}
-                    <a href="#acerca" class="headerAnclaBlock">Acerca de <span class="lineActive" style="background:#008ac9;"></span></a>
+                    <a href="#acerca" class="headerAnclaBlock">{{header_section.about_section_header_name}} <span class="lineActive" style="background:#008ac9;"></span></a>
                 {% endif %}
                 {% if header_section.show_schedule_section %}
-                    <a href="#agenda" class="headerAnclaBlock">Agenda <span class="lineActive" style="background:#008ac9;"></span></a>
+                    <a href="#agenda" class="headerAnclaBlock">{{header_section.schecule_header_name}} <span class="lineActive" style="background:#008ac9;"></span></a>
                 {% endif %}
                 {% if header_section.show_gallery_section %}
-                    <a href="#galeria" class="headerAnclaBlock">Galería <span class="lineActive" style="background:#008ac9;"></span></a>
+                    <a href="#galeria" class="headerAnclaBlock">{{header_section.gallery_header_name}} <span class="lineActive" style="background:#008ac9;"></span></a>
                 {% endif %}
                 {% if header_section.show_sponsors_section %}
-                    <a href="#auspiciador" class="headerAnclaBlock">Empresas <span class="lineActive" style="background:#008ac9;"></span></a>
+                    <a href="#auspiciador" class="headerAnclaBlock">{{header_section.sponsors_header_name}} <span class="lineActive" style="background:#008ac9;"></span></a>
                 {% endif %}
                 {% if header_section.show_networking_section %}
-                    <a href="#networking" class="headerAnclaBlock">Networking <span class="lineActive" style="background:#008ac9;"></span></a>
+                    <a href="#networking" class="headerAnclaBlock">{{header_section.networking_header_name}} <span class="lineActive" style="background:#008ac9;"></span></a>
                 {% endif %}
                 {% if header_section.show_survey_section %}
-                    <a href="#encuesta" class="headerAnclaBlock">Encuesta <span class="lineActive" style="background:#008ac9;"></span></a>
+                    <a href="#encuesta" class="headerAnclaBlock">{{header_section.survey_header_name}} <span class="lineActive" style="background:#008ac9;"></span></a>
                 {% endif %}
                 {% if header_section.show_exhibitors_section %}
-                <a href="#expositor" class="headerAnclaBlock">Expositores <span class="lineActive" style="background:#008ac9;"></span></a>
+                <a href="#expositor" class="headerAnclaBlock">{{header_section.exhibitors_header_name}} <span class="lineActive" style="background:#008ac9;"></span></a>
                 {% endif %}
                 {% if logged_user and is_live %}
                     <a href="#" class=" headerEnVivo">En vivo <img src="/static/web/img/live.svg" alt=""></a>
@@ -48,8 +48,8 @@
             {% endif %}
             <div class="headerOptionsSessions">
                 <div class="headerOptionLogout f aic jcfe">
-                    <a href="" class="headerButtonLogin login">Inicia Sesión</a>
-                    <a href="" class="headerButtonRegistrate">Pre-Registro</a>
+                    <a href="" class="headerButtonLogin login">{{header_section.login_title}}</a>
+                    <a href="" class="headerButtonRegistrate">{{header_section.register_title}}</a>
                 </div>
                 <div class="headerOptionLogin f aic jcfe">
                     <h3 class="headerNameUser">Hola {{logged_user.names}}</h3>
