--- a/src/templates/landing/home.html
+++ b/src/templates/landing/home.html
@@ -37,7 +37,7 @@
                 <a href="#" class="clickVideo popup scrollItem" data-urlvideo="{{home_page.home_video_url}}">
                     <span>Ver video</span>
                     <!-- linea circular animada administrable -->
-                    <div class="lineCircleAnimate" style="border:2px solid #008AC9;"></div>
+                    <div class="lineCircleAnimate" style="border:2px solid {{header_section.button_color}};"></div>
                 </a>
             {% endif %}
             <div class="b1Date f aifs jcfs scrollItem">
@@ -69,7 +69,7 @@
                 {% for row in home_page.get_items %}
                     {% if row.description != "" %}
                     <li class="b3ItemList">
-                        <a href="#" class="b3ClickToggle" data-color-initial="#008AC9" data-color-active="#17181B">
+                        <a href="#" class="b3ClickToggle" data-color-initial="{{header_section.button_color}}" data-color-active="#17181B">
                             {{row.title}}
                             <span class="circleLessMore"></span>
                         </a>
